fixing module overflow

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ textarea {
 
 input {
   height: 18px;
-  margin: 0 10px;
+  margin: 0 5px;
   width: 32px;
   text-align: center;
   font-size: 16px;
